testdata/baselines/reference/submodule/compiler/mergedModuleDeclarationCodeGen5.errors.txt
mergedModuleDeclarationCodeGen5.ts(14,21): error TS2304: Cannot find name 'doom'.


==== mergedModuleDeclarationCodeGen5.ts (1 errors) ====
    module M.buz.plop {
        export function doom() { }
        export function M() { }
    }
    module M.buz.plop {
        function gunk() { }
        function buz() { }
        export class fudge { }
        export enum plop { }
    
        // Emit these references as follows
        var v1 = gunk; // gunk
        var v2 = buz; // buz
        export var v3 = doom; // _plop.doom
                        ~~~~
!!! error TS2304: Cannot find name 'doom'.
        export var v4 = M; // _plop.M
        export var v5 = fudge; // fudge
        export var v6 = plop; // plop
    }